--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "yarn": "^1.22.18"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1"
   }
