--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
     "@tailwindcss/typography": "^0.5.2",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.1"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
