--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "marked": "^4.0.12",
     "next": "12.1.1",
     "next-themes": "^0.1.1",
     "react": "17.0.2",
