--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.5.0",
     "marked": "^4.0.12",
     "next": "12.1.1",
     "next-themes": "^0.1.1",
