--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "export": "next export"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.5.0",
     "marked": "^4.0.12",
-    "next": "12.1.1",
+    "next": "^13.5.6",
     "next-themes": "^0.1.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "yarn": "^1.22.18"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1"
+    "eslint-config-next": "^13.5.6"
   },
   "browser": {
     "fs": false,
